@@ -1,3 +1,7 @@
+2007-04-16 Added autofmt_xdate to handle adjusting the bottom and
+           rotating the tick labels for date plots when the ticks
+           often overlap
+
 2007-04-09 Beginnings of usetex support for pdf backend. -JKS
 
 2007-04-07 Fixed legend/LineCollection bug. Added label support
